--- a/style.css
+++ b/style.css
@@ -3,18 +3,18 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  align-items: flex-start; /* Aligner les cartes en haut de la page */
+  align-items: flex-start; 
   height: 100vh;
   box-sizing: border-box;
 }
 
 #conteneur-carte {
   display: flex;
-  flex-wrap: wrap; /* Permet aux cartes de s’enrouler sur plusieurs lignes */
-  justify-content: center; /* Centrer les cartes horizontalement */
-  gap: 20px; /* Ajoute un espace entre les cartes */
+  flex-wrap: wrap; 
+  justify-content: center; 
+  gap: 20px; 
   width: 100%;
-  max-width: 1200px; /* Ajuste la largeur du conteneur si nécessaire */
+  max-width: 1200px; 
   padding: 20px;
   box-sizing: border-box;
 }
@@ -22,7 +22,7 @@ body {
 .carte {
   display: flex;
   flex-direction: column;
-  width: 400px; /* Carte plus large */
+  width: 400px; 
   padding: 20px;
   box-sizing: border-box;
   border: 1px solid #ccc;
@@ -78,7 +78,7 @@ body {
 }
 
 
-/* Ajout du bouton de bascule */
+
 #toggle-view {
   position: fixed;
   top: 20px;
@@ -97,7 +97,7 @@ body {
   background-color: #009700;
 }
 
-/* Mode mosaïque (par défaut) */
+
 #conteneur-carte {
   display: flex;
   flex-wrap: wrap;
@@ -106,21 +106,21 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* Mode carrousel */
+
 #conteneur-carte.carrousel {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
   scroll-behavior: smooth;
   padding: 20px;
-  padding-left: 42.4%; /* Ajoute un décalage pour voir la première carte */
+  padding-left: 42.4%; 
   gap: 20px;
-  scroll-snap-type: x mandatory; /* Effet de défilement fluide */
+  scroll-snap-type: x mandatory; 
 }
 
 #conteneur-carte.carrousel .carte {
-  flex: 0 0 80%; /* Taille de la carte */
-  scroll-snap-align: center; /* Centre la carte lors du scroll */
+  flex: 0 0 80%; 
+  scroll-snap-align: center; 
 }
 
 
