--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ body {
   box-sizing: border-box;
 }
 
+#conteneur-carte.carrousel {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  padding-left: 20px;
+
 .carte {
   display: flex;
   flex-direction: column;
